--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,17 @@
 *.app
 
 
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+
+
 build/**/*
