--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,36 +1,82 @@
+#
+# Specify minimum CMake version and project name
+#
 cmake_minimum_required(VERSION 3.9)
 
 
 project(FlappyBirdAI)
-
-
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+#
+# CMake setup
+#
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+set (CMAKE_VERBOSE_MAKEFILE 0) # 1 should be used for debugging
+set (CMAKE_SUPPRESS_REGENERATION TRUE) # Suppresses ZERO_CHECK
+if(MSVC)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
+else()
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -std=c++11")
+  if(NOT WIN32)
+    set(GLAD_LIBRARIES dl)
+  endif()
+endif()
 
-set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
-set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
-set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+#
+# GLFW options
+#
+option (GLFW_INSTALL OFF)
+option (GLFW_BUILD_DOCS OFF)
+option (GLFW_BUILD_EXAMPLES OFF)
+option (GLFW_BUILD_TESTS OFF)
+add_subdirectory (libs/glfw)
 
+#
+# Set include paths
+#
+include_directories (src/
+                     libs/glad/include/
+                     libs/glfw/include/
+                     libs/glm/include/glm
+                     )
 
-add_subdirectory(libs/glfw)
+#
+# Add files
+#
+file (GLOB         GLAD_SOURCES libs/glad/src/glad.c)
+file (GLOB_RECURSE PROJECT_HEADERS src/*.hpp
+                                   src/*.h)
+file (GLOB_RECURSE PROJECT_SOURCES src/*.cpp
+                                   src/*.cxx
+                                   src/*.cc
+                                   src/*.c)
+#file (GLOB_RECURSE PROJECT_SHADERS res/shaders/*.comp
+#                                   res/shaders/*.frag
+#                                   res/shaders/*.geom
+#                                   res/shaders/*.vert)
+file (GLOB         PROJECT_CONFIGS CMakeLists.txt)
 
-include_directories(libs/glad/include)
-#include_directories(libs/imgui)
-include_directories(libs/glfw/include)
+#
+# Organizing files
+#
+source_group ("headers" FILES ${PROJECT_HEADERS})
+#source_group ("shaders" FILES ${PROJECT_SHADERS})
+source_group ("sources" FILES ${PROJECT_SOURCES})
+source_group ("vendors" FILES ${GLAD_SOURCES})
 
-file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp  ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h)
-
-
-set(GLAD  "libs/glad/include/glad/glad.h"
-         "libs/glad/src/glad.c")
-
-
-add_executable(FlappyBirdAI  ${SOURCES} ${GLAD})
-
-find_package(OpenGL REQUIRED)
-
-target_link_libraries(FlappyBirdAI  PRIVATE ${OPENGL_gl_LIBRARY})
-target_link_libraries(FlappyBirdAI PRIVATE glfw ${GLFW_LIBRARIES})
-target_link_libraries(FlappyBirdAI PRIVATE ${CMAKE_DL_LIBS})
+#
+# Set executable and target link libraries
+#
+add_definitions (-DGLFW_INCLUDE_NONE
+                 -DPROJECT_SOURCE_DIR=\"${PROJECT_SOURCE_DIR}\")
+add_executable (${PROJECT_NAME} ${PROJECT_SOURCES} ${PROJECT_HEADERS}
+                                 ${PROJECT_CONFIGS}
+                                ${GLAD_SOURCES})
+target_link_libraries (${PROJECT_NAME}
+                       glfw
+                       ${GLFW_LIBRARIES}
+                       ${GLAD_LIBRARIES})
+set_target_properties (${PROJECT_NAME} PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${PROJECT_NAME})
